Initial Working Build
Minor Bugs Remain

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link type="text/css" rel="stylesheet" href="snake.css" />
   </head>
   <body>
-    <h1>Play Snake</h1>
+    <div id = "rightside"></div>
+    <p id = "p01">TRUMP SNAKE</p>
     <canvas id="snake" width="760" height="480"></canvas>
-    <h2>Instructions</h2>
+    <p id = "p02">Instructions:</p>
+    <p id = "p03">The goal of the game is to get as high a score as possible!</p>
+    <p id = "p04">Controls: UP (W or &uarr;) DOWN (S or &darr;) LEFT (A or &larr;) RIGHT (D or &rarr;).</p>
+    <p id = "p05">Score points by collecting money.  The game will be over if The Donald runs in to his own wall or goes outside the bounds of the screen.</p>
+    <p id = "p06">To restart the game at any time, press R.  Press M to mute/unmute.</p>
     <script type="text/javascript" src="snake.js"></script>
   </body>
 </html>
